--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>IntelliHealth</title>
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
 </head>
 
